# SAS-HAR

./: .gitignore  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
.sisyphus/notepads/: wisdm_investigation.md
configs/: config.yaml  default.yaml
configs/dataset/: default.yaml
configs/model/: default.yaml
configs/papers/: paper1_segmentation.yaml  paper2_ssl.yaml  paper3_edge.yaml
configs/training/: default.yaml
docs/: IMPROVEMENT_PLAN.md  README.md  paper_outlines.md
docs/datasets/: dataset_details.md  opportunity.md  pamap2.md  uci_har.md  wisdm.md
docs/diagrams/: architecture_diagrams.md
docs/experiments/: datasets.md  evaluation_metrics.md  experiment_plan.md
docs/figures/: DIAGRAM_SPECIFICATIONS.md  nanohar_pipeline.tex  results_summary.tex  sas_har_architecture.tex  segmentation_comparison.tex  segmentation_pipeline.tex  tcbl_module.tex
docs/literature/: deep_learning_HAR.md  har_overview.md  research_gap_analysis.md  segmentation_methods.md  self_supervised_learning.md  similarity_based_methods.md  transformer_based_HAR.md
docs/method/: attention_based_segmentation.md  edge_ai_deployment.md  hybrid_cnn_transformer_model.md  segmentation_algorithm.md  self_supervised_learning.md  system_overview.md
docs/proposal/: contributions.md  expected_publications.md  methodology.md  phd_proposal.md  proposal_comparison.md  research_gap.md  research_questions.md  timeline.md
docs/results/: ablation_studies.md  baseline_results.md  results_template.md  segmentation_results.md
docs/theory/: mathematical_framework.md  mathematical_framework_v2.md
experiments/: BENCHMARK_RESULTS.md  all_datasets_results.txt
experiments/ablation_study/: ablation_results.json  ablation_table.tex
figures/: sashar_architecture.tex  segmentation_pipeline.tex  tcbl_contrastive.tex
legacy/: README.md  adaptive_sliding_window_analysis.md  deep_similarity_segmentation_analysis.md  similarity_segmentation_analysis.md
sashar/: README.md  __init__.py
scripts/: check_wisdm.py  complete_experiments.py  download_datasets.py  generate_figures.py  generate_visualizations.py  improved_wisdm.py  preprocess_datasets.py  preprocess_wisdm_fixed.py  quick_start.py  run_ablation_study.py  run_all_datasets.py  run_all_experiments.py  run_benchmark.py  run_cross_dataset_transfer.py  run_full_benchmark.py  run_multi_seed_benchmark.py  run_stats_transfer.py  run_wisdm_benchmark.py  simple_wisdm.py  simulate_user_study.py  test_datasets.py  train.py  train_hydra.py
tests/: conftest.py
(+51 files in other folders)
