[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sashar"
version = "0.1.0"
description = "Self-Supervised Attention-Based Segmentation for Human Activity Recognition"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mohammed Jasim", email = "mohammed.jasim@usm.my"}
]
maintainers = [
    {name = "Mohammed Jasim", email = "mohammed.jasim@usm.my"}
]
keywords = [
    "human activity recognition",
    "deep learning",
    "temporal segmentation",
    "self-supervised learning",
    "transformer",
    "wearable sensors",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "tensorboard>=2.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
all = [
    "sashar[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/sas-har"
Documentation = "https://github.com/yourusername/sas-har/docs"
Repository = "https://github.com/yourusername/sas-har.git"
Issues = "https://github.com/yourusername/sas-har/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sashar*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | legacy
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", "__pycache__", "legacy"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["legacy", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
